--- a/studio/Move.toml
+++ b/studio/Move.toml
@@ -26,7 +26,7 @@ subdir = "aptos-move/framework/aptos-token"
 [dependencies.Composables]
 git = "https://github.com/TowneSquare/TowneSpace-contract"
 rev = "v0.2.0-alpha"
-subdir = ""
+subdir = "composables"
 
 [dev-dependencies]
 
